[package]
name = "http-proxy-client-async"
version = "0.3.1"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Async I/O HTTP 1.1 CONNECT proxy client protocol implementation"
keywords = ["http", "http-connect", "async", "protocol", "proxy"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/MOZGIII/http-proxy-client-async"

[dependencies]
http = "0.2"
httparse = "1.3"
futures-io = "0.3"
futures-util = "0.3"

[dev-dependencies]
futures = "0.3"
merge-io = "0.3"
